-- improved documentation a lot -- added release properties -- removed parent site generation
git-svn-id: http://maven-alfresco-archetypes.googlecode.com/svn/trunk@45 04253f4f-3451-0410-a141-5562f1e59037